--- a/testimonials.html
+++ b/testimonials.html
@@ -94,94 +94,21 @@
                 </div>
             </div>
         </header>  
-        <section class="page-section" id="testimonials" style="background-color: #111111; color: #f0f0f0;">
+
+        <section class="page-section" id="testimonials" style="background-color:#111;color:#f0f0f0;">
             <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase"><span style="color: #f0f0f0;">Testimonials</span></h2>
-                </div>
-                <div class="row">
-                    <div class="col-lg-10 mx-auto">
-                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
-                            <div class="testimonial-rating" style="color: #f5c518;">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
-                            </div>
-                            <p class="testimonial-text" style="color: #f0f0f0;">"You are a really good friend to work with, you have some other nicer qualities you don't mention, but you are nice to work with and are helpful."</p>
-                            <div class="testimonial-author" style="color: #888;">- JustPlain -</div>
-                        </div>
-                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
-                            <div class="testimonial-rating" style="color: #f5c518;">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <p class="testimonial-text" style="color: #f0f0f0;">"I've worked with you on a few games, and you always get me good work, animations are very good, and your buildings are pretty, I will never decline working with you."</p>
-                            <div class="testimonial-author" style="color: #888;">- TuxLinux -</div>
-                        </div>
-                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
-                            <div class="testimonial-rating" style="color: #f5c518;">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <p class="testimonial-text" style="color: #f0f0f0;">"Your work went past the rest of the dev team's thoughts lol, your animations were smooth, and you are somehow the best at scripting in the team."</p>
-                            <div class="testimonial-author" style="color: #888;">- Z1mbe -</div>
-                        </div>
-                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
-                            <div class="testimonial-rating" style="color: #f5c518;">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <p class="testimonial-text" style="color: #f0f0f0;">"Very good service, he's just really cracked at what he does and fast, he's also really passionate on the stuff he works on."</p>
-                            <div class="testimonial-author" style="color: #888;">- Lighty_42 - Owner of DOORS: Paradox -</div>
-                        </div>
-                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
-                            <div class="testimonial-rating" style="color: #f5c518;">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <p class="testimonial-text" style="color: #f0f0f0;">"your 3D modeling isn't perfect, but it isn't bad by any means. even though you don't advertise it as the best you are still not awful at it, I'd say your a little above average in skill."</p>
-                            <div class="testimonial-author" style="color: #888;">- RealAndresYas110 -</div>
-                        </div>
-                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
-                            <div class="testimonial-rating" style="color: #f5c518;">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star-half-alt"></i>
-                            </div>
-                            <p class="testimonial-text" style="color: #f0f0f0;">"Fancy Ducc is honestly one of the best people ive worked with, his work flow and quality is beyond expectations"</p>
-                            <div class="testimonial-author" style="color: #888;">- Sam - Owner of Unpaid Workers and Sillygoofs -</div>
-                        </div>
-                        <div class="testimonial-card" style="background-color: #222; padding: 1.5rem; border-radius: 0.5rem; margin-bottom: 2rem;">
-                            <div class="testimonial-rating" style="color: #f5c518;">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                            <p class="testimonial-text" style="color: #f0f0f0;">"Working with you was very nice, you were dedicated through the full game and tbh were the funniest person on the team by far. You are also very creative, which isn't very common anymore."</p>
-                            <div class="testimonial-author" style="color: #888;">- Polyograthyms -</div>
-                        </div>
-                    </div>
-                </div>
+              <div class="text-center mb-5">
+                <h2 class="section-heading text-uppercase">Testimonials</h2>
+              </div>
+          
+              <div id="testimonialsContainer" class="row g-4"></div>
+          
+              <p class="text-center mt-5 text-muted small">
+                All names provided here were asked what they think of my work.
+              </p>
             </div>
-            <div class="text-center" style="margin-top: 2rem; color: #888;">
-                <p>All names provided here were asked what they think of my work</p>
-            </div>
-        </section>
+          </section>
+
         <div class="divider"></div>
         <section class="contact-page-section" id="contact">
             <div class="container">
@@ -215,6 +142,7 @@
                 </div>
             </div>
         </footer>
+        <script src="js/testimonials.js"></script>
         <script rel="preload" async src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer></script>
         <script src="js/scripts.js"></script>
